--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
     "typescript-eslint": "^8.31.0"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.804.0",
+    "@aws-sdk/client-s3": "^3.848.0",
     "@aws-sdk/client-ses": "^3.835.0",
+    "@aws-sdk/s3-request-presigner": "^3.848.0",
     "@prisma/client": "^6.9.0",
     "@sentry/node": "^9.29.0",
     "bcrypt": "^6.0.0",
