--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "fcm-node": "^1.6.1",
+    "firebase-admin": "^13.4.0",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
