--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "commonjs",
     "strict": true,
     "esModuleInterop": true,
+    "resolveJsonModule": true, // ✅ Add this line
     "outDir": "./dist",
     "rootDir": "./src"
   },
